java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting7/GenericsArrayCreation.java
class A<T> {
    class B{}
}
class C<T> extends A<T> {
    {
        B[] o = <error descr="Generic array creation">{}</error>;
    }
}